--- a/Tutorial01/Tutorial01/Tutorial01_2010.vcxproj.filters
+++ b/Tutorial01/Tutorial01/Tutorial01_2010.vcxproj.filters
@@ -35,6 +35,7 @@
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="DrawingPolicy.cpp" />
     <ClCompile Include="SimpleDrawingPolicy.cpp" />
+    <ClCompile Include="ShaderRes.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CLInclude Include="resource.h">
@@ -53,6 +54,7 @@
     <ClInclude Include="Engine.h" />
     <ClInclude Include="DrawingPolicy.h" />
     <ClInclude Include="SimpleDrawingPolicy.h" />
+    <ClInclude Include="ShaderRes.h" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
