--- a/Tutorial01/Tutorial01/Tutorial01_2010.vcxproj.filters
+++ b/Tutorial01/Tutorial01/Tutorial01_2010.vcxproj.filters
@@ -62,6 +62,7 @@
     <ClInclude Include="SkeletalMesh.h" />
     <ClInclude Include="SkeletalMeshComponent.h" />
     <ClInclude Include="Skeleton.h" />
+    <ClInclude Include="Util.h" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
