--- a/Tutorial01/Tutorial01/Tutorial01_2010.vcxproj
+++ b/Tutorial01/Tutorial01/Tutorial01_2010.vcxproj
@@ -366,6 +366,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <None Include="LineShader.fx" />
     <None Include="SimpleShader.fx" />
     <None Include="Tutorial01.fx" />
   </ItemGroup>
@@ -376,6 +377,7 @@
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="FbxFileImporter.cpp" />
+    <ClCompile Include="LineBatcher.cpp" />
     <ClCompile Include="RenderTargets.cpp" />
     <ClCompile Include="ShaderRes.cpp" />
     <ClCompile Include="SimpleDrawingPolicy.cpp" />
@@ -395,6 +397,7 @@
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="FbxFileImporter.h" />
+    <ClInclude Include="LineBatcher.h" />
     <ClInclude Include="RenderTargets.h" />
     <CLInclude Include="resource.h" />
     <ClInclude Include="ShaderRes.h" />
