--- a/Tutorial01/Tutorial01/Tutorial01_2010.vcxproj.filters
+++ b/Tutorial01/Tutorial01/Tutorial01_2010.vcxproj.filters
@@ -46,6 +46,7 @@
     <ClCompile Include="OutputDebug.cpp" />
     <ClCompile Include="AssertDebug.cpp" />
     <ClCompile Include="Util.cpp" />
+    <ClCompile Include="SkeletalMeshRenderData.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CLInclude Include="resource.h">
@@ -73,6 +74,7 @@
     <ClInclude Include="LineBatcher.h" />
     <ClInclude Include="OutputDebug.h" />
     <ClInclude Include="AssertDebug.h" />
+    <ClInclude Include="SkeletalMeshRenderData.h" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
