--- a/Tutorial01/Tutorial01/Tutorial01_2010.vcxproj
+++ b/Tutorial01/Tutorial01/Tutorial01_2010.vcxproj
@@ -366,9 +366,12 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <None Include="GBufferShader.fx" />
+    <None Include="GpuSkinning.hlsl" />
     <None Include="LineShader.fx" />
     <None Include="SimpleShader.fx" />
     <None Include="Tutorial01.fx" />
+    <None Include="VSPSInput.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AnimationClip.cpp" />
@@ -380,6 +383,7 @@
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="FbxFileImporter.cpp" />
+    <ClCompile Include="GBufferDrawingPolicy.cpp" />
     <ClCompile Include="LineBatcher.cpp" />
     <ClCompile Include="MathUtil.cpp" />
     <ClCompile Include="OutputDebug.cpp" />
@@ -407,6 +411,7 @@
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="FbxFileImporter.h" />
+    <ClInclude Include="GBufferDrawingPolicy.h" />
     <ClInclude Include="LineBatcher.h" />
     <ClInclude Include="MathUtil.h" />
     <ClInclude Include="OutputDebug.h" />
