--- a/Tutorial01/Tutorial01/Tutorial01_2010.vcxproj.filters
+++ b/Tutorial01/Tutorial01/Tutorial01_2010.vcxproj.filters
@@ -37,6 +37,9 @@
     <None Include="QuadShader.fx">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="DeferredDirectional.fx.fx">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Tutorial01.cpp" />
