Light class add.

--- a/Tutorial01/Tutorial01/Tutorial01_2010.vcxproj
+++ b/Tutorial01/Tutorial01/Tutorial01_2010.vcxproj
@@ -384,14 +384,17 @@
     <ClCompile Include="AssertDebug.cpp" />
     <ClCompile Include="BaseComponent.cpp" />
     <ClCompile Include="BaseObject.cpp" />
+    <ClCompile Include="DirectionalLightComponent.cpp" />
     <ClCompile Include="DrawingPolicy.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="FbxFileImporter.cpp" />
     <ClCompile Include="GBufferDrawingPolicy.cpp" />
+    <ClCompile Include="LightComponent.cpp" />
     <ClCompile Include="LineBatcher.cpp" />
     <ClCompile Include="MathUtil.cpp" />
     <ClCompile Include="OutputDebug.cpp" />
+    <ClCompile Include="PointLightComponent.cpp" />
     <ClCompile Include="ShaderRes.cpp" />
     <ClCompile Include="SimpleDrawingPolicy.cpp" />
     <ClCompile Include="SkeletalMesh.cpp" />
@@ -413,14 +416,17 @@
     <ClInclude Include="AssertDebug.h" />
     <ClInclude Include="BaseComponent.h" />
     <ClInclude Include="BaseObject.h" />
+    <ClInclude Include="DirectionalLightComponent.h" />
     <ClInclude Include="DrawingPolicy.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="FbxFileImporter.h" />
     <ClInclude Include="GBufferDrawingPolicy.h" />
+    <ClInclude Include="LightComponent.h" />
     <ClInclude Include="LineBatcher.h" />
     <ClInclude Include="MathUtil.h" />
     <ClInclude Include="OutputDebug.h" />
+    <ClInclude Include="PointLightComponent.h" />
     <CLInclude Include="resource.h" />
     <ClInclude Include="ShaderRes.h" />
     <ClInclude Include="SimpleDrawingPolicy.h" />
