--- a/Tutorial01/Tutorial01/Tutorial01_2010.vcxproj
+++ b/Tutorial01/Tutorial01/Tutorial01_2010.vcxproj
@@ -395,6 +395,7 @@
     <ClCompile Include="MathUtil.cpp" />
     <ClCompile Include="OutputDebug.cpp" />
     <ClCompile Include="PointLightComponent.cpp" />
+    <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShaderRes.cpp" />
     <ClCompile Include="SimpleDrawingPolicy.cpp" />
     <ClCompile Include="SkeletalMesh.cpp" />
@@ -428,6 +429,7 @@
     <ClInclude Include="OutputDebug.h" />
     <ClInclude Include="PointLightComponent.h" />
     <CLInclude Include="resource.h" />
+    <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderRes.h" />
     <ClInclude Include="SimpleDrawingPolicy.h" />
     <ClInclude Include="SkeletalMesh.h" />
